# flowfast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
flowfast/: base.py  step.py  workflow.py
tests/: test_tasks.py  test_wokflow.py
